[workspace]
resolver = "2"
# Currently guest only exists for the workspace configuration not to break
members = ["node", "layer-one-utils", "avi-trie-integrations"]
exclude = ["kairos-contracts", "risc0-trie/methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
