[package]
name = "layer-one-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
groth16 = ["risc0-groth16"]

[dependencies]
casper-client = {git="https://github.com/jonas089/casper-client-rs", branch="kairos-1.5.6-uni"}
casper-types = {git="https://github.com/jonas089/casper-node", branch="dev"}
casper-hashing = {git="https://github.com/jonas089/casper-node", branch="dev"}
tokio = {version="1.36.0", features=["full"]}
serde = "1.0"
serde_json = "1.0.114"
bincode = "1.3.3"

risc0-zkvm = {version="0.21.0", default-features=false, features=["prove"]}
risc0-groth16 = { version = "0.21.0", optional=true }

kairos-trie = {git="https://github.com/cspr-rad/kairos-trie", default-features=false, features=["serde"]}
circuits = {path="../risc0-trie/methods"}
avi-trie-integrations = {path="../avi-trie-integrations", features=["serde"]}
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
