[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.4", features = ["macros", "tokio"]}
bigdecimal = {version = "0.4.3", features = ["serde"]}
bincode = "1.3.3"
chrono = {version = "0.4.35", features = ["serde"]}
deadpool = {version = "0.10.0", default-features = false, features = ["managed"]}
deadpool-diesel = {version = "0.5.0", features = ["postgres"]}
diesel = {version = "2.1.4", features = ["postgres", "serde_json", "chrono", "numeric"]}
fern = "0.6.2"
risc0-zkvm = {version="0.21", default-features=false, features=["prove"]}
lazy_static = "1.4.0"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.34"
tokio = {version = "1.36.0", features = ["macros"]}
toml = "0.8.11"
diesel_migrations = {version = "2.1.0", features=["postgres"]}
axum-otel-metrics = {version = "0.8.0", optional = true}
diesel-derive-enum = {version = "2.1.0", features = ["postgres"]}

[dev-dependencies]
cargo-nextest = "0.9.67"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["run-for-all", "user-hooks"]

[features]
default = ["metrics"]
metrics = ["axum-otel-metrics"]
