[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = { version = "4.0.0", default-features = false }
casper-types = { version = "4.0.1", default-features = false }
casper-event-standard = { version = "0.5.0", default-features = false }
serde = {version="1", default-features=false, features=["derive"]}
risc0-zkvm = {version="0.21", default-features=false}#{ version="0.21.0", default-features=false }
borsh = {version="1.5.0", default-features=false, features=["derive"]}
serde-json-wasm = "1"

[build]
target = "wasm32-unknown-unknown"

[[bin]]
name = "demo-contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
