[package]
name = "prove_batch"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = {git="https://github.com/jonas089/risc0-borsh", default-features=false}
kairos-trie-integrations = {path="../../../kairos-trie-integrations", features=["serde"]}