[package]
name = "prove_batch"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = {version="0.21", default-features=false}
kairos-trie-integrations = {path="../../../kairos-trie-integrations", features=["serde"]}